# golang-by-example

./: .gitignore  README.md
C++client/: CMakeLists.txt  chatproto.proto  main.cc
UploadFile/: go.mod  go.sum
UploadFile/excelFiles/: main.go
UploadFile/pdfFile/: main.go
bidirectionalgRPC/: go.mod
bidirectionalgRPC/client/: main.go
bidirectionalgRPC/genproto/: math.pb.go  math_grpc.pb.go
bidirectionalgRPC/proto/: math.proto
bidirectionalgRPC/server/: main.go
chatBidirectionalStream/: Dockerfile  chat.proto  deploy.sh  docker-compose.yaml  go.mod  main.go
chatBidirectionalStream/clientA/: Makefile  main.go
chatBidirectionalStream/clientB/: clientB.go
chatBidirectionalStream/clientC/: clientC.go
chatBidirectionalStream/genproto/: chat.pb.go  chat_grpc.pb.go
chatBidirectionalStream/proto/: chat.proto
chatBidirectionalStream/server/: server.go
client-socket/: .env  Dockerfile  package-lock.json  package.json
client-socket/src/: App.tsx
client-socket/src/chart/: chart.tsx  types.ts
client-socket/src/socket/: clientSocket.tsx
encryptingFiles/: go.mod  main.go
go-socket-server/: go.mod  go.sum  main.go
kafka-go/: consumer.go  getting-started.properties  go.mod
kafka-go/producer/: producer.go
kafka-go/util/: util.go
seminar-report/channel/bidirectionalChannel/: main.go
seminar-report/channel/undirectionalChannel/: main.go
seminar-report/defer/: main.go
seminar-report/defer-panic-recover/: main.go
seminar-report/nil/: main.go
seminar-report/polymorphism/: main.go
seminar-report/struct/: main.go
simplegRPC/: calculate.proto  go.mod
simplegRPC/client/: main.go
simplegRPC/proto/: calculate.pb.go  calculate_grpc.pb.go
simplegRPC/server/: main.go
(+2 files in other folders)
